    - Newly added trades to hex cores with existing items in their inventories will no longer auto-update inventory slot filters based on the trade contents.
    - The notifications in chat about various upgrades taking effect now have more of an arcade style to them, as well as better consistency in formatting.
    - Improved the productivity info when the productivity is negative.
  Gui:
    - Re-spaced the lines between trades in the hex core GUI.
    - Lines only show between trades once the "Trade Configuration" feature is unlocked.
  Bugfixes:
    - Fixed that spidertrons and other vehicles would disappear when a hex core spawns underneath them.
    - Fixed that connecting cliff sprites were not updated after a hex core spawns in their way, destroying them.
    - Fixed that the mod setting for the bronze rank effect did not actually change the effect.
    - Fixed that trade productivity progress bars could be off by very tiny amounts when they shouldn't be (floating point rounding errors).
  Optimizations:
    - Throttled processing for most frame-dropping events: item rank ups (trade productivity updates), hex tile placement, trade overview calculations.
    - When multiple players are using the trade overview simulataneously, the calculations are load balanced (full speed for one player, half speed for two players, etc.).
    - Optimized sorting trades in the trade overview by total item value.
    - Optimized trade productivity updates.
    - Part of the trades JSON export is batch-processed, spanning more than one tick.
---------------------------------------------------------------------------------------------------
Version: 1.3.12
Date: 16/12/25
  Bugfixes:
    - Fixed that massively overspending coins while receiving passive coin buffs caused an explosion of hexaprism coin gain.
---------------------------------------------------------------------------------------------------
Version: 1.3.11
Date: 16/12/25
  Changes:
    - Stopped spamming the logs.