@@ -16,6 +16,7 @@ Date: 18/12/25
     - Newly added trades to hex cores with existing items in their inventories will no longer auto-update inventory slot filters based on the trade contents.
     - The notifications in chat about various upgrades taking effect now have more of an arcade style to them, as well as better consistency in formatting.
     - Improved the productivity info when the productivity is negative.
+    - Removed parentheses around icons and labels in the productivity info for trades.
   Gui:
     - Re-spaced the lines between trades in the hex core GUI.
     - Lines only show between trades once the "Trade Configuration" feature is unlocked.
